--- a/TaiwanPlantApplication/app/src/main/res/layout/activity_add_plant.xml
+++ b/TaiwanPlantApplication/app/src/main/res/layout/activity_add_plant.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--新增紀錄-->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#510398"
+    android:orientation="vertical"
     android:weightSum="1"
     tools:context=".activity.AddPlantActivity">
 
@@ -19,34 +18,34 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:logo="@drawable/add_tittle_icon"
-        app:title="@string/add_title_str" />
+        app:title="@string/title_str" />
 
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
+    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">
+
         <TextView
-            android:id="@+id/type_tv_id"
+            android:id="@+id/add_tvType_id"
             style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_type_str" />
+            android:text="@string/type_add_str" />
 
         <Spinner
             android:id="@+id/add_spinner_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
             android:layout_marginStart="8dp"
-             />
+            android:layout_weight="0.5"
+            android:entries="@array/type_atr" />
 
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
+    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">
+
         <TextView
-            android:id="@+id/name_tv_id"
+            android:id="@+id/add_tvPlantame_id"
             style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_name_str" />
+            android:text="@string/name_str" />
 
         <EditText
-            android:id="@+id/name_edit_id"
+            android:id="@+id/add_etPlantName_id"
             style="@style/AppTheme.addPlantEdit"
             android:layout_weight="0.5"
             android:ems="10"
@@ -54,62 +53,45 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
+    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">
 
         <TextView
-            android:id="@+id/family_tv_id"
+            android:id="@+id/add_tvFamily_id"
             style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_family_str" />
+            android:text="@string/family_str" />
 
         <EditText
-            android:id="@+id/family_edit_id"
+            android:id="@+id/add_etFamily_id"
             style="@style/AppTheme.addPlantEdit"
             android:layout_weight="0.5"
             android:ems="10"
             android:inputType="textPersonName" />
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
+    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">
+
         <TextView
-            android:id="@+id/location_tv_id"
+            android:id="@+id/add_tvLocation_id"
             style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_location_str" />
+            android:text="@string/location_str" />
 
         <EditText
-            android:id="@+id/location_edit_id"
+            android:id="@+id/add_etLocation_id"
             style="@style/AppTheme.addPlantEdit"
             android:layout_weight="0.5"
             android:ems="10"
             android:inputType="textPersonName" />
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
+    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">
+
         <TextView
-            android:id="@+id/tude_tv_id"
+            android:id="@+id/add_tvNum_id"
             style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_tude_str" />
+            android:text="@string/number_str" />
 
         <EditText
-            android:id="@+id/tude_edit_id"
-            style="@style/AppTheme.addPlantEdit"
-            android:layout_weight="0.5"
-            android:ems="10"
-            android:inputType="number" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
-        <TextView
-            android:id="@+id/num_tv_id"
-            style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_number_str" />
-
-        <EditText
-            android:id="@+id/num_edit_id"
+            android:id="@+id/add_etNum_id"
             style="@style/AppTheme.addPlantEdit"
             android:layout_weight="0.5"
             android:ems="10"
@@ -117,14 +99,61 @@
     </LinearLayout>
 
     <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout">
+        style="@style/AppTheme.AddPlantLinearLayout"
+        android:layout_weight="0.18"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/add_tvLng_id_id"
+                style="@style/AppTheme.AddPlantTextView"
+                android:layout_marginStart="0dp"
+                android:text="@string/lng_str" />
+
+            <EditText
+                android:id="@+id/add_etLng_id"
+                style="@style/AppTheme.addPlantEdit"
+                android:layout_weight="0.5"
+                android:ems="18"
+                android:inputType="number"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/add_tvLat_id_id"
+                style="@style/AppTheme.AddPlantTextView"
+                android:layout_marginStart="0dp"
+                android:text="@string/lat_str" />
+
+            <EditText
+                android:id="@+id/add_etLat_id"
+                style="@style/AppTheme.addPlantEdit"
+                android:layout_weight="0.5"
+                android:ems="18"
+                android:inputType="number"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">
+
         <TextView
-            android:id="@+id/date_tv_id"
+            android:id="@+id/add_tvDate_id"
             style="@style/AppTheme.AddPlantTextView"
-            android:text="@string/add_time_str" />
+            android:text="@string/date_str" />
 
         <EditText
-            android:id="@+id/date_edit_id"
+            android:id="@+id/add_etDate_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -133,51 +162,52 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/AppTheme.AddPlantLinearLayout"
-        android:layout_weight="0.32"
-        android:orientation="vertical">
+        <LinearLayout
+            style="@style/AppTheme.AddPlantLinearLayout"
+            android:layout_weight="0.26"
+            android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/add_des_id"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:counterEnabled="true"
-            app:counterMaxLength="72">
-
-            <android.support.design.widget.TextInputEditText
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/add_layoutDes_id"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/add_des_str"
-                android:textStyle="bold"/>
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="50">
 
-        </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/add_inputDes_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/des_str"
+                    android:textStyle="bold" />
 
-    </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="2dp"
         android:layout_weight="0.08"
-        android:layout_marginTop="6dp"
-        android:weightSum="1"
         android:gravity="right"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <Button
             android:id="@+id/add_btn_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.3"
-            android:text="@string/add_add_str" />
+            android:text="@string/add_str" />
 
         <Button
             android:id="@+id/clean_btn_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="12dp"
-            android:text="@string/add_clean_str" />
+            android:layout_weight="0.3"
+            android:text="@string/clean_str" />
     </LinearLayout>
 </LinearLayout>
