--- a/TaiwanPlantApplication/app/src/main/res/layout/activity_login.xml
+++ b/TaiwanPlantApplication/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="50dp"/>
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/login_etName_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -36,7 +36,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/login_etPass_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -46,7 +46,7 @@
                 android:textStyle="bold"/>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/login_btn_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -57,13 +57,14 @@
                 android:textSize="16sp"/>
 
             <Button
-                android:id="@+id/register_btn_id"
+                android:id="@+id/toReg_btn_id"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:background="#00FFFFFF"
                 android:layout_gravity="right"
                 android:textColor="#FFFFFF"
                 android:text="註冊帳號"
+                android:textSize="14sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
