--- a/TaiwanPlantApplication/app/src/main/res/layout/activity_plants_info.xml
+++ b/TaiwanPlantApplication/app/src/main/res/layout/activity_plants_info.xml
@@ -9,85 +9,149 @@
     tools:context=".activity.PlantsInfoActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/plants_info_id"
+        android:id="@+id/info_toolbar_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:logo="@drawable/add_tittle_icon"
-        app:title="植物名稱" />
+        app:logo="@drawable/book_ic"
+        app:title="@string/plants_info_str" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="0.05">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:fillViewport="true"
+        android:scrollbarStyle="insideOverlay">
 
-        <TextView
-            android:id="@+id/plants_family_id"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textSize="18sp"
-            android:text="科名" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/plants_date_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:text="日期" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/info_viewpager_id"
+                android:layout_width="match_parent"
+                android:layout_height="320dp">
 
-    </LinearLayout>
+            </android.support.v4.view.ViewPager>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/plant_viewpager_id"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.6">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
-    </android.support.v4.view.ViewPager>
+                <TextView
+                    android:id="@+id/tv1"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="2"
+                    android:text="科名 :" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="0.05">
+                <TextView
+                    android:id="@+id/info_family_id"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="6"
+                    android:text="科名" />
 
-        <TextView
-            android:id="@+id/plants_location_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:textSize="18sp"
-            android:text="地點" />
+                <TextView
+                    android:id="@+id/tv2"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="2"
+                    android:text="日期 :" />
 
-        <TextView
-            android:id="@+id/plants_tude_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textSize="18sp"
-            android:text="經緯度" />
+                <TextView
+                    android:id="@+id/info_date_id"
+                    style="@style/PlantInfoTheme_TextView"
 
-    </LinearLayout>
+                    android:layout_weight="5"
+                    android:text="日期" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.05"
-        android:textSize="18sp"
-        android:text="數量" />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/plants_des_id"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.25"
-        android:textSize="16sp"
-        android:text="說明" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
+
+                <TextView
+                    android:id="@+id/tv3"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="2"
+                    android:text="地點 :" />
+
+                <TextView
+                    android:id="@+id/info_location_id"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="6"
+                    android:text="地點" />
+
+                <TextView
+                    android:id="@+id/tv5"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="2"
+                    android:text="數量 :" />
+
+                <TextView
+                    android:id="@+id/info_num_id"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="5"
+                    android:text="數量" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
+
+                <TextView
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="1"
+                    android:text="@string/lng_str" />
+                <TextView
+                    android:id="@+id/info_tvLng_id"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="7"
+                    android:text="@string/lng_str" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
+
+                <TextView
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="1"
+                    android:text="@string/lat_str" />
+                <TextView
+                    android:id="@+id/info_tvLat_id"
+                    style="@style/PlantInfoTheme_TextView"
+                    android:layout_weight="7"
+                    android:text="@string/lat_str" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/info_des_id"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:textColor="#000"
+                android:text="說明 : "
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
