--- a/TaiwanPlantApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/TaiwanPlantApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,29 +8,29 @@
         <item
             android:id="@+id/nav_add_id"
             android:icon="@drawable/ic_menu_add"
-            android:title="@string/menu_add" />
+            android:title="@string/draw_add" />
         <item
             android:id="@+id/nav_myData_id"
             android:icon="@drawable/ic_menu_mydata"
-            android:title="@string/menu_myData" />
+            android:title="@string/draw_myData" />
         <item
             android:id="@+id/nav_search_id"
             android:icon="@drawable/ic_menu_search"
-            android:title="@string/menu_search" />
+            android:title="@string/draw_search" />
         <item
             android:id="@+id/nav_camera_id"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_import" />
+            android:title="@string/draw_import" />
 
         <item
             android:id="@+id/nav_setting_id"
             android:icon="@drawable/ic_menu_settings"
-            android:title="@string/menu_setting" />
+            android:title="@string/draw_setting" />
 
         <item
             android:id="@+id/nav_login_id"
             android:icon="@drawable/ic_menu_account"
-            android:title="@string/menu_account" />
+            android:title="@string/draw_account" />
     </group>
 
 </menu>
